charts/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: insurance-api
---
apiVersion: v1
kind: Namespace
metadata:
  name: insurance-web
